--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,14 @@ label {
         text-align: center;
     }
 
+    .navbar{
+        transition: all 0.7s;
+    }
+    .navbar-scrolled{
+        background-color: black;
+        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15);
+    }
+
 @media only screen and (max-width: 768px) {
     .algn-right {
         display: block;
